name:                artifact-draft
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/skeet70/artifact-draft#readme
license:             BSD3
license-file:        LICENSE
author:              Murph Murphy
maintainer:          murph@clurictec.com
copyright:           2018 Ryan "Murph" Murphy
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.Card, Data.Pack
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , eventful-core
                     , eventful-memory
                     , servant-server
                     , text
                     , wai
                     , warp
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings

executable artifact-draft
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , artifact-draft
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings

test-suite artifact-draft-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , artifact-draft
                     , tasty
                     , tasty-hunit
                     , tasty-quickcheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings

source-repository head
  type:     git
  location: https://github.com/skeet70/artifact-draft
